# rules_pycross_oci

./: .bazelrc.example  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  flake.nix  update_poetry_lock.sh
cowapp/: BUILD.bazel  cmd.txt  main.py  poetry_lock.bzl  pyproject.toml
cowapp/tests/: test_foo.py
