load("@rules_pycross//pycross:defs.bzl", "pycross_target_environment")

_darwin_x86_64 = [
  "@platforms//os:macos",
  "@platforms//cpu:x86_64",
]

_darwin_arm64 = [
  "@platforms//os:macos",
  "@platforms//cpu:arm64",
]

_linux_x86_64 = [
  "@platforms//os:linux",
  "@platforms//cpu:x86_64",
]

platform(
  name = "darwin_x86_64",
  constraint_values = _darwin_x86_64,
)

platform(
  name = "darwin_arm64",
  constraint_values = _darwin_arm64,
)

platform(
  name = "linux_x86_64",
  constraint_values = _linux_x86_64,
  visibility = [ "//visibility:public" ],
)

PYTHON_VERSION = "3.10.11"

pycross_target_environment(
  name = "python_darwin_x86_64",
  abis = ["cp311"],
  platforms = ["macosx_12_0_x86_64"],
  python_compatible_with = _darwin_x86_64,
  version = PYTHON_VERSION,
  visibility = [ "//visibility:public" ],
)

pycross_target_environment(
  name = "python_darwin_arm64",
  abis = ["cp311"],
  platforms = ["macosx_12_0_arm64"],
  python_compatible_with = _darwin_arm64,
  version = PYTHON_VERSION,
  visibility = [ "//visibility:public" ],
)

pycross_target_environment(
  name = "python_linux_x86_64",
  abis = ["cp311"],
  platforms = [
    "linux_x86_64",
    "manylinux2014_x86_64",
  ] + [
    "manylinux_2_%s_x86_64" % str(i)
    for i in range(17, 25)
  ],
  python_compatible_with = _linux_x86_64,
  version = PYTHON_VERSION,
  visibility = [ "//visibility:public" ],
)
