load("@rules_pycross//pycross:defs.bzl", "pycross_target_environment")

_darwin_x86_64 = [
  "@platforms//os:macos",
  "@platforms//cpu:x86_64",
]

_darwin_arm64 = [
  "@platforms//os:macos",
  "@platforms//cpu:arm64",
]

_linux_x86_64 = [
  "@platforms//os:linux",
  "@platforms//cpu:x86_64",
]

_linux_arm64 = [
  "@platforms//os:linux",
  "@platforms//cpu:arm64",
]

platform(
  name = "darwin_x86_64",
  constraint_values = _darwin_x86_64,
)

platform(
  name = "darwin_arm64",
  constraint_values = _darwin_arm64,
)

platform(
  name = "linux_x86_64",
  constraint_values = _linux_x86_64,
  visibility = [ "//visibility:public" ],
)

platform(
  name = "linux_arm64",
  constraint_values = _linux_arm64,
  visibility = [ "//visibility:public" ],
)

pycross_target_environment(
  name = "python_3_12_darwin_x86_64",
  abis = ["cp312"],
  platforms = ["macosx_12_0_x86_64"],
  python_compatible_with = _darwin_x86_64,
  version = "3.12.4",
  visibility = [ "//visibility:public" ],
)

pycross_target_environment(
  name = "python_3_12_darwin_arm64",
  abis = ["cp312"],
  platforms = ["macosx_12_0_arm64"],
  python_compatible_with = _darwin_arm64,
  version = "3.12.4",
  visibility = [ "//visibility:public" ],
)

pycross_target_environment(
  name = "python_3_12_linux_x86_64",
  abis = ["cp312"],
  platforms = [
    "linux_x86_64",
    "manylinux2014_x86_64",
  ] + [
    "manylinux_2_%s_x86_64" % str(i)
    for i in range(17, 25)
  ],
  python_compatible_with = _linux_x86_64,
  version = "3.12.4",
  visibility = [ "//visibility:public" ],
)

pycross_target_environment(
  name = "python_3_12_linux_arm64",
  abis = ["cp312"],
  platforms = [
    "linux_aarch64",
    "manylinux2014_aarch64",
  ] + [
    "manylinux_2_%s_aarch64" % str(i)
    for i in range(17, 25)
  ],
  python_compatible_with = _linux_arm64,
  version = "3.12.4",
  visibility = [ "//visibility:public" ],
)
