# deps
bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "aspect_rules_py", version = "0.7.4")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# rules_oci
bazel_dep(name = "rules_oci", version = "1.8.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "ubuntu_24_04",
    digest = "sha256:8a37d68f4f73ebf3d4efafbcf66379bf3728902a8038616808f04e34a9ab63ee",
    image = "ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)

use_repo(oci, "ubuntu_24_04")

# rules_python
bazel_dep(name = "rules_python", version = "0.35.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    is_default = True,
    configure_coverage_tool = True,
    python_version = "3.12.4",
)

python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11.9",
)

use_repo(
    python,
    "python_versions",
    python_3_12 = "python_3_12_4",
    python_3_11 = "python_3_11_9",
)

# rules_pycross
bazel_dep(name = "rules_pycross", version = "0.6.1")

environments = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
use_repo(environments, "pycross_environments")

lock_file = use_extension("@rules_pycross//pycross/extensions:lock_file.bzl", "lock_file")
lock_file.instantiate(
    name = "poetry_lock_file",
    lock_file = "//cowapp:poetry_lock.bzl",
)

use_repo(lock_file, "poetry_lock_file")
